# language-kit

./: .dir-locals.el  ChangeLog.md  README.md  bp-lang.cabal  cabal.project  language-kit.cabal
fragment/bool/: TmBool.hs  TyBool.hs
fragment/bool/Bool/Rule/: Eval.hs
fragment/bool/Bool/Structure/: Term.hs  Type.hs
fragment/eq-int/: TmEq.hs
fragment/eq-int/Eq/Rule/: Eval.hs
fragment/eq-int/Eq/Structure/: Term.hs
fragment/int/: TmInt.hs  TyInt.hs
fragment/int/Int/Rule/: Eval.hs
fragment/int/Int/Structure/: Term.hs  Type.hs
fragment/stlc/: TmSTLC.hs  TySTLC.hs
fragment/stlc/STLC/Rule/: Eval.hs
fragment/stlc/STLC/Structure/: Term.hs  Type.hs
lang/: Lang.hs
lang/ibe/: IBE.hs
rule/eval/Rule/: Eval.hs
rule/pattern/Rule/: Pattern.hs
structure/data/: Data.hs
structure/data/Structure/: Data.hs
structure/kind/: Kind.hs
structure/kind/Structure/: Kind.hs
structure/pattern/: Pattern.hs
structure/pattern/Structure/: Alt.hs  Pattern.hs
structure/term/: Term.hs
structure/term/Structure/: Term.hs
structure/type/: Type.hs
structure/type/Structure/: Type.hs
