name:                language-kit
version:             0.1.0.0
license:             BSD3
license-file:        LICENSE
author:              Dave Laing
maintainer:          dave.laing.80@gmail.com
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=2.0

library lang
  exposed-modules:     Lang
  build-depends:       base >=4.9 && < 5
                     , lens >=4.16 && < 4.17
                     , bound >= 2.0.1 && < 2.1
                     , deriving-compat >= 0.4 && < 0.5
  hs-source-dirs:      lang
  ghc-options:         -Wall
  default-language:    Haskell2010

library structure-term
  exposed-modules:     Structure.Term
  build-depends:       base >=4.9 && < 5
                     , lens >=4.16 && < 4.17
                     , bound >= 2.0.1 && < 2.1
                     , deriving-compat >= 0.4 && < 0.5
                     , lang
  hs-source-dirs:      structure/term
  ghc-options:         -Wall
  default-language:    Haskell2010

library structure-pattern
  exposed-modules:     Structure.Pattern
                     , Structure.Alt
  build-depends:       base >=4.9 && < 5
                     , lens >=4.16 && < 4.17
                     , bound >= 2.0.1 && < 2.1
                     , deriving-compat >= 0.4 && < 0.5
                     , lang
  hs-source-dirs:      structure/pattern
  ghc-options:         -Wall
  default-language:    Haskell2010

library structure-type
  exposed-modules:     Structure.Type
  build-depends:       base >=4.9 && < 5
                     , lens >=4.16 && < 4.17
                     , deriving-compat >= 0.4 && < 0.5
                     , lang
  hs-source-dirs:      structure/type
  ghc-options:         -Wall
  default-language:    Haskell2010

library structure-data
  exposed-modules:     Structure.Data
  build-depends:       base >=4.9 && < 5
                     , lens >=4.16 && < 4.17
                     , deriving-compat >= 0.4 && < 0.5
                     , lang
  hs-source-dirs:      structure/data
  ghc-options:         -Wall
  default-language:    Haskell2010

library structure-kind
  exposed-modules:     Structure.Kind
  build-depends:       base >=4.9 && < 5
                     , lens >=4.16 && < 4.17
                     , deriving-compat >= 0.4 && < 0.5
                     , lang
  hs-source-dirs:      structure/kind
  ghc-options:         -Wall
  default-language:    Haskell2010

library rule-eval
  exposed-modules:     Rule.Eval
  build-depends:       base >=4.9 && < 5
                     , lens >=4.16 && < 4.17
                     , structure-term
  hs-source-dirs:      rule/eval
  ghc-options:         -Wall
  default-language:    Haskell2010

library fragment-int
  exposed-modules:     Int.Structure.Term
                     , Int.Structure.Type
                     , Int.Rule.Eval
  build-depends:       base >=4.9 && < 5
                     , lens >=4.16 && < 4.17
                     , bound >= 2.0.1 && < 2.1
                     , deriving-compat >= 0.4 && < 0.5
                     , lang
                     , structure-term
                     , structure-type
                     , rule-eval
  hs-source-dirs:      fragment/int
  ghc-options:         -Wall
  default-language:    Haskell2010

library fragment-bool
  exposed-modules:     Bool.Structure.Term
                     , Bool.Structure.Type
                     , Bool.Rule.Eval
  build-depends:       base >=4.9 && < 5
                     , lens >=4.16 && < 4.17
                     , bound >= 2.0.1 && < 2.1
                     , deriving-compat >= 0.4 && < 0.5
                     , lang
                     , structure-term
                     , structure-type
                     , rule-eval
  hs-source-dirs:      fragment/bool
  ghc-options:         -Wall
  default-language:    Haskell2010

library fragment-eq-int
  exposed-modules:     Eq.Structure.Term
                     , Eq.Rule.Eval
  build-depends:       base >=4.9 && < 5
                     , lens >=4.16 && < 4.17
                     , bound >= 2.0.1 && < 2.1
                     , deriving-compat >= 0.4 && < 0.5
                     , lang
                     , structure-term
                     , rule-eval
                     , fragment-int
                     , fragment-bool
  hs-source-dirs:      fragment/eq-int
  ghc-options:         -Wall
  default-language:    Haskell2010

library fragment-stlc
  exposed-modules:     STLC.Structure.Term
                     , STLC.Structure.Type
                     , STLC.Rule.Eval
  build-depends:       base >=4.9 && < 5
                     , lens >=4.16 && < 4.17
                     , bound >= 2.0.1 && < 2.1
                     , deriving-compat >= 0.4 && < 0.5
                     , lang
                     , structure-term
                     , structure-type
                     , rule-eval
  hs-source-dirs:      fragment/stlc
  ghc-options:         -Wall
  default-language:    Haskell2010

library lang-ibe
  exposed-modules:     IBE
  build-depends:       base >=4.9 && < 5
                     , lens >=4.16 && < 4.17
                     , bound >= 2.0.1 && < 2.1
                     , deriving-compat >= 0.4 && < 0.5
                     , lang
                     , structure-term
                     , structure-type
                     , fragment-int
                     , fragment-bool
                     , fragment-eq-int
                     , fragment-stlc
                     , rule-eval
  hs-source-dirs:      lang/ibe
  ghc-options:         -Wall
  default-language:    Haskell2010

library
  exposed-modules:     Scratch
  build-depends:       base >=4.9 && < 5
  hs-source-dirs:      src
  default-language:    Haskell2010
